src/objects/Meeting_Notes__c.object
<CustomObject>
    <description>TOOLKIT: An object to capture notes from ALL meetings.</description>
    <fields>
        <fullName>Action_Items__c</fullName>
        <description>Action Items captured during the meeting. These should be transferred to action items in the toolkit.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Action Items</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Attendees__c</fullName>
        <description>Names of everyone who attended the meeting.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Attendees</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Core_Team__c</fullName>
        <label>Core Team</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Blueprint</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Meeting_Date_and_Time__c</fullName>
        <description>Date and Time of the Meeting</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Meeting Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Meeting_Facilitator__c</fullName>
        <description>First and Last Name of the Meeting Facilitator</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Meeting Facilitator</label>
        <length>40</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Meeting_Location__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Meeting Location</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Meeting_Note_Taker__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Meeting Note Taker</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Meeting_Notes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Meeting_Notes__c</fullName>
        <description>Detailed Meeting Notes</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Meeting Notes Details</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Meeting_Objectives__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Meeting Objectives</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Release__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Release to which the meeting is related.</description>
        <label>Release</label>
        <referenceTo>Release__c</referenceTo>
        <relationshipLabel>Meeting Notes</relationshipLabel>
        <relationshipName>Meeting_Notes</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Request__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Request</label>
        <referenceTo>Request__c</referenceTo>
        <relationshipLabel>Meeting Notes</relationshipLabel>
        <relationshipName>Meeting_Notes</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Meeting Notes</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Meeting_Date_and_Time__c</columns>
        <columns>Meeting_Facilitator__c</columns>
        <columns>Meeting_Location__c</columns>
        <columns>Release__c</columns>
        <filterScope>Everything</filterScope>
        <label>All VSP Global CRM Program Meeting Notes</label>
    </listViews>
    <listViews>
        <fullName>Release_3_VSP_Global_CRM_Meeting_Notes</fullName>
        <columns>NAME</columns>
        <columns>Meeting_Date_and_Time__c</columns>
        <columns>Meeting_Facilitator__c</columns>
        <columns>Meeting_Location__c</columns>
        <columns>Release__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Release__c</field>
            <operation>equals</operation>
            <value>Release 3</value>
        </filters>
        <label>Release 3 VSP Global CRM Meeting Notes</label>
    </listViews>
    <listViews>
        <fullName>Release_5_VSP_Global_CRM_Meeting_Notes</fullName>
        <columns>Request__c</columns>
        <columns>NAME</columns>
        <columns>Meeting_Date_and_Time__c</columns>
        <columns>Meeting_Notes__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Release__c</field>
            <operation>equals</operation>
            <value>Release 5</value>
        </filters>
        <label>Release 5 VSP Global CRM Meeting Notes</label>
    </listViews>
    <listViews>
        <fullName>Release_6_VSP_Global_CRM_Meeting_Notes</fullName>
        <columns>Request__c</columns>
        <columns>NAME</columns>
        <columns>Meeting_Date_and_Time__c</columns>
        <columns>Meeting_Notes__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Release__c</field>
            <operation>equals</operation>
            <value>Release 6</value>
        </filters>
        <label>Release 6 VSP Global CRM Meeting Notes</label>
    </listViews>
    <listViews>
        <fullName>Release_7_VSP_Global_CRM_Meeting_Notes</fullName>
        <columns>Request__c</columns>
        <columns>NAME</columns>
        <columns>Meeting_Date_and_Time__c</columns>
        <columns>Meeting_Notes__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Release__c</field>
            <operation>equals</operation>
            <value>Release 7</value>
        </filters>
        <label>Release 7 VSP Global CRM Meeting Notes</label>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Meeting Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Meeting Notes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>